<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:layout_marginTop="25sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/user_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/logo"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="35sp"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:hint="@string/hint_user_surname" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/user_surname"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="35sp"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:hint="@string/hint_user_name" />
    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/user_name"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="35sp"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:hint="@string/hint_user_lastname" />
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/lastname"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="35sp"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:inputType="phone"
        android:hint="@string/hint_phone" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/phone"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="35sp"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email" />
    <Button
        android:id="@+id/main_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="25sp"
        android:layout_marginHorizontal="135sp"
        android:text="@string/main_btn"
        />

</RelativeLayout>